--- a/css/style.css
+++ b/css/style.css
@@ -209,4 +209,7 @@ li {
     border-radius: 10px !important;
     border: 2px solid #BBA2B9 !important;
   }
-  
+  .mapa{
+  width: 100%;
+  height: 480px;
+}
