--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,14 @@ li {
     font-weight: 600;
     margin-right: 12px;
   }
-
+  .ativo{
+    color: white;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #bba2b9 #747474 #747474 #bba2b9;
+    border-radius: 30px;
+    background-color: #9D7C9A; 
+  }
   .nav-item .nav-link:hover{
     color: white;
     border-style: solid;
@@ -126,6 +133,7 @@ li {
     margin-bottom: 10px;
   }
 
+
   /* outros */
 
   #imgm {
@@ -147,6 +155,7 @@ li {
     height: 120px;
     width: 100%;
     background-color: #bba2b9;
+    margin-top:5px;
   }
 
   .video {
@@ -208,6 +217,8 @@ li {
     font-family: sans-serif;
     font-size: 19px;
     font-weight: bold;
+    margin-right: 4px;
+    margin-left: 4px;
   }
 
   mark{
