--- a/css/style.css
+++ b/css/style.css
@@ -250,3 +250,9 @@ li {
     color:#9D7C9A;
     font-weight: bold;
   }
+  spam{
+   font-family: League Gothic;
+   font-size: 30px;
+   color: #fdf0fc;
+   background-color: #bba2b9;
+ }
