--- a/css/style.css
+++ b/css/style.css
@@ -160,10 +160,12 @@ li {
   }
   #rodape {
     align-items: center;
-    height: 120px;
+    height: auto;
     width: 100%;
     background-color: #bba2b9;
-    margin-top:5px;
+    margin-top:5px; #rodape 
+    padding: 20px; /*padding para o conteúdo não ficar espremido*/
+}
   }
 
   .video {
@@ -220,13 +222,12 @@ li {
     color: #747474;
     font-family: sans-serif;
     font-size: 19px;
-    font-weight: bold;
     margin-right: 4px;
     margin-left: 4px;
   }
 
   mark{
-    background-color:#A888A6 !important;
+    background-color:#D8BFD8 !important;
     color:#4F4F4F !important;
   }
   
@@ -236,7 +237,6 @@ li {
   }
   .mapa{
     width: 100%;
-    height: 480px;
   }
 
   .link{
@@ -256,3 +256,30 @@ li {
    color: #fdf0fc;
    background-color: #bba2b9;
  }
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+margin-bottom: .5rem;
+font-family: inherit;
+font-weight: 500;
+line-height: 1.2; /*removeria**/
+color: inherit;
+}
+
+.row {
+display: -ms-flexbox;
+display: flex;
+-ms-flex-wrap: wrap;
+flex-wrap: wrap;
+/* margin-right: -15px; */
+/* margin-left: -15px; */
+margin: 30px 10px; /***adicionar margin pra espaçar e respirar os blocos de informações*/
+
+.embed-responsive {
+position: relative;
+display: block;
+width: 100%;
+padding: 0;
+margin: 20px 0; /***adicionar margin pra espaçar e respirar os blocos de informações*/
+overflow: hidden;
+}
+
